--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -1,9 +1,8 @@
-* {
+.order__items * {
     font-family: "IBM Plex Sans KR", sans-serif;
-    font-weight: 400;
+    /*font-weight: 400;*/
     font-style: normal;
 }
-
 
 .tb__order table {
     /* 2024.05.21 [혁락] 85% -> 55%*/
@@ -53,6 +52,11 @@
     font-size: 16px;
 }
 
+.tb__order td a {
+    color: black;
+    text-decoration: none;
+}
+
 .tb__order hr {
     width: 85%;
     height: 1px;
@@ -61,7 +65,7 @@
 }
 
 .first__under {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .tb__order thead th {
@@ -81,16 +85,16 @@
 }
 
 .order__title {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
+   /* display: grid;*/
+    /*grid-template-columns: repeat(2, auto);*/
     align-items: center;
     margin: 1% 8%;
     color: rgb(51, 51, 51);
     font-size: 13px;
     font-weight: 800;
     letter-spacing: 1.4px;
-    justify-content: space-between;
-    text-align: center;
+   /* justify-content: space-between;*/
+    text-align: right;
     white-space: nowrap;
 }
 
@@ -130,8 +134,37 @@
 
 
 .tb__right {
-    display: grid;
-    grid-template-columns: repeat(4, 33%);
+    display: flex;
+    text-align: left;
+    font-weight: bold;
+    font-size: 14px;
+    flex-direction: column;
+    align-items: end;
+    padding: 1.5%;
+}
+.tb__right div {
+    border: 1px solid black;
+    padding: 15px;
+    width: 250px;
+}
+.totalSum,
+.odpayamt,
+.cupon,
+.grade,
+.card,
+.point{
+    display: flex;
+    justify-content: space-between;
+}
+
+#odpayamt {
+    font-weight: bold;
+}
+
+/*.tb__right {
+    !*display: block;*!
+    text-align: right   ;
+    justify-content: space-evenly;
     place-items: center center;
     font-weight: bold;
     font-size: 14px;
