주문상세 이미지 수정

--- a/src/main/webapp/resources/css/order_det.css
+++ b/src/main/webapp/resources/css/order_det.css
@@ -180,7 +180,6 @@
     vertical-align: middle;
     word-break: break-all;
     border-spacing: 0;
-    margin: 0;
     outline: none;
 }
 
@@ -190,6 +189,7 @@
 }
 
 .product-info {
+    margin-left: 50px;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -197,8 +197,8 @@
 }
 
 .product-info img {
-    width: 100px;
-    height: 100px;
+    width: auto;
+    height: 110px;
     object-fit: cover;
 }
 
