--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -85,15 +85,12 @@
 }
 
 .order__title {
-   /* display: grid;*/
-    /*grid-template-columns: repeat(2, auto);*/
     align-items: center;
     margin: 1% 8%;
     color: rgb(51, 51, 51);
     font-size: 13px;
     font-weight: 800;
     letter-spacing: 1.4px;
-   /* justify-content: space-between;*/
     text-align: right;
     white-space: nowrap;
 }
@@ -103,12 +100,10 @@
     font-size: 14px;
 }
 
-
 .tb__order img {
     height: 110px;
     width: 110px;
 }
-
 
 .order__title__detail {
     font-size: 15px;
@@ -122,8 +117,6 @@
     color: #8d8d8d;
 }
 
-
-
 .title__order {
     margin-left: 8%;
     font-size: 15px;
@@ -132,47 +125,22 @@
     margin-top: 5%;
 }
 
-
-.tb__right {
-    display: flex;
-    text-align: left;
-    font-weight: bold;
-    font-size: 14px;
-    flex-direction: column;
-    align-items: end;
-    padding: 1.5%;
-}
 .tb__right div {
-    border: 1px solid black;
-    padding: 15px;
-    width: 250px;
+    padding: 15px 15px 15px 25px;
+    width: 300px;
 }
 .totalSum,
 .odpayamt,
-.cupon,
+.coupon,
 .grade,
 .card,
-.point{
+.point,
+.dlv-fare{
     display: flex;
     justify-content: space-between;
 }
 
-#odpayamt {
-    font-weight: bold;
+#odpayamt{
+    font-size: larger;
+    font-weight: 900;
 }
-
-/*.tb__right {
-    !*display: block;*!
-    text-align: right   ;
-    justify-content: space-evenly;
-    place-items: center center;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.tb__order tfoot td,
-.tb__order tfoot tr{
-    border-bottom: 1px solid black;
-    padding: 10px;
-}
-
