--- a/src/main/webapp/resources/css/productDetail.css
+++ b/src/main/webapp/resources/css/productDetail.css
@@ -1,6 +1,9 @@
+body.productDetail{
+    margin-top: 75px;
+}
 :root {
     --btn-width : 90%;
-    --btn-min-width : 90%;
+    --btn-min-width : 100%;
     --btn-height : 5vh;
     --btn-min-height : 5px;
     --menu-height : calc(var(--btn-height) * 8);
@@ -12,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: var(--btn-width);
+    width: 90%;
 }
 /*화면 상단 토글 메뉴*/
 .prdLabel {
@@ -48,11 +51,14 @@
     border-bottom: 0.5px solid black;
 }
 .prdMenu li{
+    letter-spacing: 0.5px;
+    line-height: 150%;
     padding-top: 10px;
+    padding-bottom: 20px;
 }
 .toggle:checked ~ .prdMenu{
-    height: var(--menu-height);
-    min-height: var(--menu-min-height);
+    height: auto;
+    min-height: auto;
     opacity: 1;
     display: block;
 }
@@ -66,9 +72,13 @@
 }
 .productItemMnImg{
     flex: 3;
+    width: 900px;
+    height: 1000px;
+    background-color: #EBEBEB;
 }
 .productItemDsc{
     flex: 2;
+    padding-left: 50px;
 }
 /*화면 중단 상세 사진*/
 .detailProductContainer{
@@ -90,7 +100,7 @@
 #mnImg{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 /* 상세페이지 뷰 스크롤 바 (이전에 구현한 네비게이션 바)*/
 /*.prdList{*/
@@ -177,7 +187,7 @@
 .writeReviewBtn{
     position: absolute;
     right: 1%;
-    top: 10%;
+    top: 8%;
 }
 /* 리뷰테이블 */
 .reviewTable {
@@ -235,7 +245,7 @@
 .writeQnABtn{
     position: absolute;
     right: 1%;
-    top: 10%;
+    top: 8%;
 }
 
 /* 제품문의테이블 */
@@ -323,7 +333,7 @@ body{overflow-x: hidden}
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px; /* 이미지 간격 조정 */
+    /*gap: 20px; !* 이미지 간격 조정 *!*/
 }
 .prdRltd {
     text-align: center; /* 이미지와 제품명을 중앙 정렬 */
@@ -335,7 +345,7 @@ body{overflow-x: hidden}
     color: inherit;
 }
 .prdRltd img {
-    width: 500px; /* 이미지 너비 조정 */
+    width: 400px; /* 이미지 너비 조정 */
     height: auto; /* 비율에 맞게 높이 자동 조정 */
     cursor: pointer; /* 마우스 포인터를 손가락 모양으로 변경 */
     border: 2px solid #ddd; /* 이미지 테두리 */
