--- a/src/main/webapp/resources/css/order_det.css
+++ b/src/main/webapp/resources/css/order_det.css
@@ -108,12 +108,6 @@
     font-size: 14px;
 }
 
-.tb__order img {
-    height: 110px;
-    width: 110px;
-}
-
-
 .order__title__detail {
     font-size: 15px;
 }
@@ -197,9 +191,10 @@
 }
 
 .product-info img {
-    width: auto;
+    width: 100px;
     height: 110px;
-    object-fit: cover;
+    object-fit: scale-down;
+    background-color: #ebebeb;
 }
 
 .info {
