--- a/src/main/webapp/resources/css/adminDefaultTable.css
+++ b/src/main/webapp/resources/css/adminDefaultTable.css
@@ -14,6 +14,9 @@ th, td {
 
 th {
     border: 1px solid #ddd;
+}
+
+th {
     background-color: #f3f3f3;
     text-align: center;
     font-size: 15px;
