--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -1,4 +1,4 @@
-.order__items * {
+* {
     font-family: "IBM Plex Sans KR", sans-serif;
     /*font-weight: 400;*/
     font-style: normal;
@@ -13,6 +13,25 @@
     font-size: 13px;
     line-height: 1.35;
     color: #777;
+}
+
+.product-info {
+    margin-left: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    text-align: left !important;
+}
+
+.product-info img {
+    width: 100px;
+    height: 110px;
+    object-fit: scale-down;
+    background-color: #ebebeb;
+}
+
+.info {
+    margin-left: 50px;
 }
 
 .order__title__detail a,
@@ -100,10 +119,12 @@
     font-size: 14px;
 }
 
+
 .tb__order img {
     height: 110px;
     width: 110px;
 }
+
 
 .order__title__detail {
     font-size: 15px;
@@ -119,10 +140,10 @@
 
 .title__order {
     margin-left: 8%;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 600;
     margin-bottom: 10px;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .tb__right div {
@@ -140,7 +161,31 @@
     justify-content: space-between;
 }
 
+#odpayamt {
+    font-size: larger;
+    font-weight: 900;
+}
+
+.product-row {
+    border-bottom: 1px solid #ccc;
+}
+
+
+/*.tb__right {
+    !*display: block;*!
+    text-align: right   ;
+    justify-content: space-evenly;
+    place-items: center center;
+    font-weight: bold;
+    font-size: 14px;
 #odpayamt{
     font-size: larger;
     font-weight: 900;
 }
+
+.tb__order tfoot td,
+.tb__order tfoot tr{
+    border-bottom: 1px solid black;
+    padding: 10px;
+}
+
