--- a/src/main/webapp/resources/assets/css/owl-carousel.css
+++ b/src/main/webapp/resources/assets/css/owl-carousel.css
@@ -42,6 +42,8 @@
   .owl-carousel .item {
     position: relative;
     width: 100%;
+    max-width: 420px;
+    margin-left: 20px;
   }
   .owl-carousel .owl-item {
     position: relative;
@@ -88,7 +90,12 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none; }
+    user-select: none;
+  }
+  .owl-stage .owl-item {
+    max-width: 420px !important;
+    margin-right: 20px !important;
+  }
   .owl-carousel.owl-grab {
     cursor: move;
     cursor: grab; }
@@ -188,3 +195,8 @@
   z-index: 1;
   height: 100%;
   width: 100%; }
+
+/*추가 css*/
+.owl-item {
+  width: fit-content;
+}
