--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -59,7 +59,6 @@ body:not(.index) {
     padding: 0 3%;
 }
 
-
 .main_header li,
 .header__dropbtn {
     margin: 17px;
@@ -113,4 +112,8 @@ body:not(.index) {
 .header__dropdown:hover .header__dropdown-content {
     display: block;
 }
+
+.hidden { display: none;}
+#keywordResultList { list-style-type: none; padding: 0; }
+#keywordResultList li { cursor: pointer; }
 /* dropDown 마이페이지 끝: */
