--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -1,4 +1,3 @@
-
 .main_footer {
     display: grid;
     grid-template-columns: repeat(2, 45%);
@@ -7,7 +6,8 @@
     justify-content: center;
     align-items: start;
     padding-top: 40px;
-    background-color: darkolivegreen;
+    padding-left: 20px;
+    background-color: #333333;
 }
 
 .wrap_inner_left {
@@ -55,7 +55,7 @@
 }
 
 .footerLogo > span,
-.info > span {
+.footer_info > span {
     padding-left: 10px;
     font-size: 13px;
     font-weight: bold;
