--- a/src/main/webapp/resources/css/reset.css
+++ b/src/main/webapp/resources/css/reset.css
@@ -127,3 +127,9 @@ table {
 *::after {
     box-sizing: border-box;
 }
+
+*, header, body, footer {
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
